[gd_scene load_steps=3 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://addons/discord_gd/discord.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="DiscordBot" type="HTTPRequest" parent="."]
script = ExtResource( 2 )

[node name="HadithAPIRequest" type="HTTPRequest" parent="."]

[connection signal="request_completed" from="HadithAPIRequest" to="." method="_on_HadithAPI_request_completed"]
